--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
     <header class="header">
         <div class="left-section">
             <!-- <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="menu icon"> -->
-            <!-- <a href="index.html" class="header-link">
-                <img class="thaiweed-logo" src="icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop"> -->
-                <!-- <img class="thaiweedNIEANAZON-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
-            <!-- </a> -->
+            <a href="index.html" class="header-link">
+                <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop">
+                <!-- <img class="thaiweedNIEA-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
+            </a>
+         
         </div>
 
         <div class="middle-section">
             <a href="index.html" class="header-link">
-                <img class="thaiweed-logo" src="icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop">
+                <div>THAIWEEDONLINE.STORE</div>
+                <!-- <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop"> -->
                 <!-- <img class="thaiweedNIEANAZON-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
             </a>
             <!-- <input class="search-bar" type="text" placeholder="Search">
@@ -53,7 +55,7 @@
             </a> -->
 
             <a class="cart-link header-link" href="checkout.html">
-                <img class="cart-icon" src="icons/cart.svg">
+                <img class="cart-icon" src="images/icons/cart.svg">
                 <div class="cart-quantity js-cart-quantity">0</div>
                 <div class="cart-text">Cart</div>
             </a>
@@ -86,27 +88,27 @@
     <nav class="sidebar">
         <a class="sidebar-linka" href="index.html">
             <div class="sidebar-link">
-                <img src="icons/house-chimney.svg" alt="">
+                <img src="images/icons/house-chimney.svg" alt="">
                 <div>Home</div>
             </div>
         </a>
         <a class="sidebar-linka" href="index.html">
             <div class="sidebar-link">
-                <img src="icons/flower-tulip.svg" alt="">
+                <img src="images/icons/flower-tulip.svg" alt="">
                 <div>Growing</div>
             </div>
         </a>
 
         <a class="sidebar-linka" href="index.html">
             <div class="sidebar-link">
-                <img src="icons/phone-rotary.svg" alt="">
+                <img src="images/icons/phone-rotary.svg" alt="">
             <div>Contact</div>
             </div>
         </a>
 
         <a class="sidebar-linka" href="index.html">
             <div class="sidebar-link">
-                <img src="icons/journal-alt.svg" alt="">
+                <img src="images/icons/journal-alt.svg" alt="">
             <div>About us</div>
             </div>
         </a>
