--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <!-- <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="menu icon"> -->
             <a href="index.html" class="header-link">
                 <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop">
-                <!-- <img class="thaiweedNIEA-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
+                <!-- <img class="thaiweed-mobile-logo" src="images/icons/thaiweed-logo4-100x56.png"> -->
             </a>
          
         </div>
 
         <div class="middle-section">
             <a href="index.html" class="header-link">
-                <div>THAIWEEDONLINE.STORE</div>
+                <div class="header-title">THAIWEEDONLINE.STORE</div>
                 <!-- <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop"> -->
                 <!-- <img class="thaiweedNIEANAZON-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
             </a>
@@ -62,19 +62,8 @@
         </div>
 
         <!--
-        <div class="right-section">
-            <div class="upload-icon-container">
-                <img class="upload-icon" src="icons/upload.svg" alt="">
-                <div class="tooltip">Create</div>
-            </div>
-
-            <div class="youtube-apps-icon-container">
-                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
-                <div class="tooltip">YouTube apps</div>
-            </div>
-
             <div class="notifications-icon-container">
-                <img class="notifications-icon" src="icons/notifications.svg" alt="">
+                <img src="icons/notifications.svg" alt="">
                 <div class="tooltip">Notifications</div>
                 <div class="notifications-count">3</div>
             </div>
