--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="middle-section">
             <a href="index.html" class="header-link">
-                <div class="header-title">THAIWEEDONLINE.STORE</div>
+                <p class="header-title">THAIWEEDONLINE.STORE</p>
                 <!-- <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop"> -->
                 <!-- <img class="thaiweedNIEANAZON-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
             </a>
