--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="sidebar.css">
+    <link rel="stylesheet" href="styles/shared/general.css">
+    <link rel="stylesheet" href="styles/shared/header.css">
+    <link rel="stylesheet" href="styles/pages/index.css">
+    <link rel="stylesheet" href="styles/shared/sidebar.css">
 
     <title>thaiweedonline.shop</title>
 </head>
@@ -21,17 +21,15 @@
 <body>
     <header class="header">
         <div class="left-section">
-            <!-- <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="menu icon"> -->
             <a href="index.html" class="header-link">
                 <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop">
-                <!-- <img class="thaiweed-mobile-logo" src="images/icons/thaiweed-logo4-100x56.png"> -->
+                <img class="thaiweed-mobile-logo" src="images/icons/thaiweed-logo4-100x56.png">
             </a>
-         
         </div>
 
         <div class="middle-section">
             <a href="index.html" class="header-link">
-                <p class="header-title">THAIWEEDONLINE.STORE</p>
+                <p class="header-title">thaiweedonline..shop</p>
                 <!-- <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop"> -->
                 <!-- <img class="thaiweedNIEANAZON-mobile-logo" src="images/ladypam-logo-200x60png.png"> -->
             </a>
