--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="styles/shared/header.css">
     <link rel="stylesheet" href="styles/pages/index.css">
     <link rel="stylesheet" href="styles/shared/sidebar.css">
-    <!-- favicon add -->
+    <link rel="stylesheet" href="styles/shared/footer.css">
+
     <title>thaiweedonline.shop</title>
 </head>
 
@@ -49,7 +50,7 @@
                 <div>Home</div>
             </div>
         </a>
-        <!-- <a class="sidebar-linka" href="index.html">
+        <!-- <a class="sidebar-linka" href="growing.html">
             <div class="sidebar-link">
                 <img src="images/icons/flower-tulip.svg" alt="">
                 <div>Growing</div>
@@ -68,17 +69,27 @@
                 <img src="images/icons/journal-alt.svg" alt="">
             <div>About us</div>
             </div>
-        </a>
+        </a>        
     </nav>
     
     <main>
-        <section class="video-grid js-products-grid">
+        <section>
+            <div>About us... will be released soon... 1.11.2024 </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/171F7bi4oeE?si=e7kQi4wSWAiE-eY0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </main>
-
-    <!--    <script src="data/cart.js"></script>-->
-    <!--    <script src="data/products.js"></script>-->
-    <script type="module" src="scripts/ladypam.js"></script>
-
+    <footer>
+        <div class="contact-links">
+          <a href="https://t.me/Martin_Poro" target="_blank">
+            <img src="images/icons/telegram.png" alt="Telegram">TELEGRAM
+          </a>
+          <a href="https://line.me/ti/p/Martin82pl" target="_blank">
+            <img src="images/icons/line_png2.png" alt="LINE">LINE
+          </a>
+          <a href="mailto:ladypam.cannabis@gmail.com">
+            <img src="images/icons/mail100x100png.png" alt="email">EMAIL
+          </a>
+        </div>
+      </footer>  
 </body>
 </html>
