--- a/tracking.html
+++ b/tracking.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tracking</title>
-
-    <!-- This code is needed for responsive design to work.
-      (Responsive design = make the website look good on
-      smaller screen sizes like a phone or a tablet). -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Load a font called Roboto from Google Fonts. -->
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,17 +14,15 @@
     <link rel="stylesheet" href="styles/pages/tracking.css">
   </head>
   <body>
-    <div class="amazon-header">
-      <div class="amazon-header-left-section">
+    <div class="header">
+      <div class="left-section">
         <a href="index.html" class="header-link">
-          <img class="amazon-logo"
-            src="images/ladypam-logo-1200x360png.png">
-          <img class="amazon-mobile-logo"
-            src="images/ladypam-logo-200x60png.png">
+            <img class="thaiweed-logo" src="images/icons/thaiweed-logo2-300x169.png" alt="logo Lady Pam Shop">
+            <img class="thaiweed-mobile-logo" src="images/icons/thaiweed-logo4-100x56.png">
         </a>
       </div>
 
-      <div class="amazon-header-middle-section">
+      <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
 
         <button class="search-button">
@@ -44,7 +37,7 @@
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
-          <img class="cart-icon" src="images/icons/cart-icon.png">
+          <img class="cart-icon" src="images/icons/cart.svg">
           <div class="cart-quantity">3</div>
           <div class="cart-text">Cart</div>
         </a>
