--- a/checkout.html
+++ b/checkout.html
@@ -79,7 +79,8 @@
           </div>
 
           <button class="place-order-button button-primary">
-            Place your order
+            <a href="contact.html">Place your order</a>
+            
           </button>
         </div>
       </div>
