--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,8 @@
     <section>
       <div class="contact">
           <h1>Hello everyone.</h1>
-          <p>Our Location is Phan Thong Chonburi, map below. If you can't visit us, don't worry, home delivery by post takes up to two days.</p>
+          <p>Our Location is Phan Thong Chonburi, map below. If you can't visit us, don't worry, we delivery home by post office, it takes up to two days.</p>
+          <p>the page will be released 1.12.2024 if you want to order some now... you of course can contact us.</p>
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242.50725286265285!2d101.10764885008862!3d13.466943502077147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d30948fa2f4a5%3A0x403d84ae1b4c450!2sPhan%20Thong%2C%20Phan%20Thong%20District%2C%20Chon%20Buri!5e0!3m2!1sen!2sth!4v1728884225590!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
