--- a/checkout.html
+++ b/checkout.html
@@ -77,11 +77,9 @@
             <div>Order total:</div>
             <div class="payment-summary-money">$52.51</div>
           </div>
-
-          <button class="place-order-button button-primary">
-            <a href="contact.html">Place your order</a>
-            
-          </button>
+          <a href="contact.html">
+            <button class="place-order-button button-primary">Place your order</button>
+          </a>
         </div>
       </div>
     </div>
