--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/shared/header.css">
     <link rel="stylesheet" href="styles/pages/index.css">
     <link rel="stylesheet" href="styles/shared/sidebar.css">
-    <!-- favicon add -->
+    <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
     <title>thaiweedonline.shop</title>
 </head>
 
@@ -29,7 +29,7 @@
 
         <div class="middle-section">
             <a href="index.html" class="header-link">
-                <p class="header-title">thaiweedonline..shop</p>
+                <p class="header-title">thaiweedonline.shop</p>
             </a>
         </div>
 
