--- a/checkout.html
+++ b/checkout.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout-header.css">
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
     <!-- <link rel="stylesheet" href="styles/shared/general.css"> -->
+    <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
 
   </head>
   <body>
@@ -30,8 +31,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Order checkout (<a class="return-to-home-link"
-            href="index.html">all items</a>)
+          Checkout (<a class="return-to-home-link"
+            href="index.html">items</a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -77,7 +78,7 @@
             <div>Order total:</div>
             <div class="payment-summary-money">$52.51</div>
           </div>
-          <a href="contact.html">
+          <a href="formula.html">
             <button class="place-order-button button-primary">Place your order</button>
           </a>
         </div>
