--- a/growing.html
+++ b/growing.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/pages/index.css">
     <link rel="stylesheet" href="styles/shared/sidebar.css">
     <link rel="stylesheet" href="styles/shared/footer.css">
+    <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
 
     <title>thaiweedonline.shop</title>
 </head>
