--- a/orders.html
+++ b/orders.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/header.css">
     <link rel="stylesheet" href="styles/pages/orders.css">
+    <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div class="header">
