--- a/tracking.html
+++ b/tracking.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/tracking.css">
+    <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div class="header">
