--- a/formula.html
+++ b/formula.html
@@ -37,7 +37,7 @@
 
 
     <h4>Send us details for sending by post office</h4>
-    <form id="dataForm" action="http://localhost:3000/upload" method="POST" enctype="multipart/form-data">
+    <form id="dataForm" action="/upload" method="POST" enctype="multipart/form-data">
         <label for="firstName">First name:</label>
         <input type="text" id="firstName" name="firstName" required><br><br>
 
