--- a/contact.html
+++ b/contact.html
@@ -51,12 +51,12 @@
               <div>Home</div>
           </div>
       </a>
-      <!-- <a class="sidebar-linka" href="growing.html">
+      <a class="sidebar-linka" href="growing.html">
           <div class="sidebar-link">
               <img src="images/icons/flower-tulip.svg" alt="">
               <div>Growing</div>
           </div>
-      </a> -->
+      </a>
 
       <a class="sidebar-linka" href="contact.html">
           <div class="sidebar-link">
