--- a/growing.html
+++ b/growing.html
@@ -48,22 +48,22 @@
 
   <nav class="sidebar">
     <a class="sidebar-linka" href="index.html">
-        <div class="sidebar-link">
-            <img src="images/icons/house-chimney.svg" alt="">
-            <div>Home</div>
-        </div>
+      <div class="sidebar-link">
+        <img src="images/icons/house-chimney.svg" alt="">
+        <div>Home</div>
+      </div>
     </a>
-    <!-- <a class="sidebar-linka" href="growing.html">
-        <div class="sidebar-link">
-            <img src="images/icons/flower-tulip.svg" alt="">
-            <div>Growing</div>
-        </div>
-    </a> -->
+    <a class="sidebar-linka" href="growing.html">
+      <div class="sidebar-link">
+        <img src="images/icons/flower-tulip.svg" alt="">
+        <div>Growing</div>
+      </div>
+    </a>
 
     <a class="sidebar-linka" href="contact.html">
         <div class="sidebar-link">
-            <img src="images/icons/phone-rotary.svg" alt="">
-        <div>Contact</div>
+          <img src="images/icons/phone-rotary.svg" alt="">
+          <div>Contact</div>
         </div>
     </a>
 
@@ -78,9 +78,23 @@
   
   <main>
     <section>
-        <div>Growing... will be released soon... 1.11.2024 </div>
+        <div>Growing... will be released soon... 1.12.2024 </div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/171F7bi4oeE?si=e7kQi4wSWAiE-eY0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
   </main>
+
+  <footer>
+    <div class="contact-links">
+      <a href="https://t.me/Martin_Poro" target="_blank">
+        <img src="images/icons/telegram.png" alt="Telegram">TELEGRAM
+      </a>
+      <a href="https://line.me/ti/p/Martin82pl" target="_blank">
+        <img src="images/icons/line_png2.png" alt="LINE">LINE
+      </a>
+      <a href="mailto:ladypam.cannabis@gmail.com">
+        <img src="images/icons/mail100x100png.png" alt="email">EMAIL
+      </a>
+    </div>
+  </footer>  
 </body>
 </html>
