--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="weed marijuana cannabis shop sell buy line online 24 h">
-    <meta name="description" content="weed shop sell cannabis marijuana line online 24 h">
+    <meta name="keywords" content="weed marijuana cannabis shop sell buy line online 24 h delivery Bangkok Pattaya">
+    <meta name="description" content="weed marijuana cannabis shop sell buy line online 24 h delivery Bangkok Pattaya">
     <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/pages/index.css">
     <link rel="stylesheet" href="styles/shared/sidebar.css">
     <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
-    <title>thaiweedonline.shop</title>
+    <title>Yout online weed shop! www.thaiweedonline.shop</title>
 </head>
 
 <body>
@@ -49,12 +49,12 @@
                 <div>Home</div>
             </div>
         </a>
-        <!-- <a class="sidebar-linka" href="index.html">
+        <a class="sidebar-linka" href="growing.html">
             <div class="sidebar-link">
                 <img src="images/icons/flower-tulip.svg" alt="">
                 <div>Growing</div>
             </div>
-        </a> -->
+        </a>
 
         <a class="sidebar-linka" href="contact.html">
             <div class="sidebar-link">
