--- a/checkout.html
+++ b/checkout.html
@@ -34,10 +34,15 @@
           Checkout (<a class="return-to-home-link"
             href="index.html">items</a>)
         </div>
+        <a href="formula.html" class="checkout-header-right-section">
+          <img class="form-icon" src="images/icons/checkmark.png" alt="Order photo">
+          <div class="form-text">Order</div>
 
-        <div class="checkout-header-right-section">
+      </a>
+
+        <!-- <div class="checkout-header-right-section">
           <img src="images/icons/checkout-lock-icon.png">
-        </div>
+        </div> -->
       </div>
     </div>
 
