--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </div>
 
         <div class="right-section">
+            <a href="formula.html" class="header-link">
+                <img class="form-icon" src="images/icons/checkmark.png" alt="Order photo">
+                <div class="form-text">Order</div>
+
+            </a>
             <a class="cart-link header-link" href="checkout.html">
                 <img class="cart-icon" src="images/icons/cart.svg">
                 <div class="cart-quantity js-cart-quantity">0</div>
